--- a/excercises_IDATA2306/excercise7/pom.xml
+++ b/excercises_IDATA2306/excercise7/pom.xml
@@ -33,7 +33,13 @@
 			<artifactId>json-path</artifactId>
 			<version>2.9.0</version>
 		</dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
